# goal-apps

./: .gitignore  CLAUDE.md  README.md  find_best_content_only.py  pyproject.toml
apps/: shared.py
apps/clustering/: analyze.py  hmog_alg.py  run.py  train.py
apps/clustering/core/: hmog_alg.py  types.py
config/: config.yaml  default.mplstyle
config/hydra/: config.yaml
config/hydra/dataset/: all-rgc.yaml  all-rgc3.yaml  neural-traces.yaml  newsgroups-hmog.yaml  newsgroups-kmeans.yaml  newsgroups-lda.yaml  newsgroups-metadata-hmog.yaml  newsgroups-metadata-kmeans.yaml  newsgroups-metadata-lda.yaml  newsgroups-metadata-tfidf.yaml  newsgroups-mfa.yaml  tasic-custom.yaml  tasic-kmeans.yaml  tasic-lda.yaml
config/hydra/model/: cifar10-hmog.yaml  cifar10-mfa-diagonal.yaml  hmog-proj-full.yaml  hmog-proj.yaml  mfa-diagonal.yaml  mfa.yaml  mnist-hmog-full.yaml  mnist-hmog-ld100.yaml  mnist-hmog-ld20.yaml  mnist-hmog-ld50.yaml  mnist-hmog-proj-full.yaml  mnist-hmog-proj.yaml  mnist-hmog-ts.yaml  mnist-hmog.yaml  mnist-kmeans.yaml  mnist-mfa-debug.yaml  mnist-mfa-diagonal.yaml  mnist-mfa.yaml  neural-hmog.yaml  neural_hmog.yaml  newsgroups-hmog.yaml  newsgroups-kmeans.yaml  newsgroups-lda.yaml  newsgroups-metadata-kmeans.yaml  newsgroups-metadata-lda.yaml  newsgroups-mfa.yaml  ng20-hmog.yaml  pbmc68k-hmog.yaml  rgc-hmog.yaml  rgc-mfa-diagonal.yaml  rgc-mfa.yaml  svhn-hmog.yaml  tasic-hmog-10c.yaml  tasic-hmog-6c.yaml  tasic-hmog-8c.yaml  tasic-hmog-lightreg.yaml  tasic-hmog-lr2e5.yaml  tasic-hmog.yaml  tasic-kmeans.yaml  tasic-lda.yaml
config/sweeps/: example.cli  example.yaml
misc/: goal-apps.def
plugins/: __init__.py
plugins/datasets/: cifar10.py  mnist.py  neural_traces.py  newsgroups.py  pbmc68k.py  svhn.py  tasic.py
plugins/models/: hmog.py
plugins/models/hmog/: __init__.py  analysis.py  artifacts.py  base.py  configs.py  experiment.py  metrics.py  model.py  projection.py  trainers.py  types.py
reports/: baseline_optimization_summary.md  baseline_reproduction_results.md  benchmark_mfa_comparison.md  diagonal_gmm_sweep_results.md  hmog_benchmark_summary.md  merge_nmi_collapse_diagnosis.md  mfa-complexity-table.md  mfa_gans_benchmark.md  mfa_nmi_diagnosis.md  mfa_prior_comparison.md  mfa_regularization_sweep.md  mfa_verification_plan.md  ng20_hmog_exploration.md  pbmc68k-hmog-sweep.md  sweep8_coa_nmi_optimization.md  tasic_clustering_problem.md
src/apps/: cli.py  config.py  configs.py  experiments.py  goal.py  plugins.py  runtime.py  util.py
(+74 files in other folders)
